--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   <body>
     <div class="d-flex bg-light">
       <h1>Lika</h1>
-      <p>Portfolio Project / Setup <i class="fa-solid fa-gear"></i></p>
+      <p>Portfolio Project / Setup</p>
+      <i class="fa-solid fa-gear"></i>
     </div>
   </body>
 </html>
