--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
     <title>Lika</title>
   </head>
   <body>
-    <div class="d-flex bg-light">
-      <h1>Lika</h1>
-      <p>Portfolio Project / Setup</p>
-      <i class="fa-solid fa-gear"></i>
+    <div>
+      <p>👋 Hello, I am</p>
+      <h1>Anzhelika Kovtun</h1>
+      <h2>Front-end developer based in Austria</h2>
+      <div>
+        <a href="#" class="btn btn-primary">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
