added styling to class Hero

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <title>Lika</title>
   </head>
   <body>
-    <div>
+    <div class="hero">
       <p>👋 Hello, I am</p>
       <h1>Anzhelika Kovtun</h1>
-      <h2>Front-end developer based in Austria</h2>
+      <h2 class="mb-5">Front-end developer based in Austria</h2>
       <div>
         <a href="#" class="btn btn-primary">Contact me</a>
       </div>
