added content to index.html

--- a/index.html
+++ b/index.html
@@ -36,5 +36,80 @@
         <a href="#" class="btn btn-primary">Contact me</a>
       </div>
     </div>
+    <p class="text-center m-5">Examples and description of my first progects</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/weatherapp.png"
+            alt="weather-app-image"
+            class="img-fluid"
+          />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              This weather app features include multiple locations, rain
+              predictions, weather forecast, humidity, visibility, wind
+              predictions, API integrations, displays the prevailing status of
+              the weather on a daily and hourly basis. etc.
+            </p>
+            <a href="btn btn-primary">Learn more</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Kīlauea volcano</h2>
+            <p class="mb-5 text-muted">
+              Kīlauea is an active shield volcano in the Hawaiian Islands.
+              Historically, it is the most active of the five volcanoes that
+              together form the island of Hawaii. Kīlauea is also one of the
+              most active volcanoes on Earth, and the most recent eruption began
+              on June 7, 2023, in the early morning hours after a series of
+              earthquakes. Prior to this, Kīlauea had erupted on September 29,
+              2021, when several vents began to erupt lava within Halema uma u,
+              a pit crater in the volcano's summit caldera, and ended on March
+              7, 2023.
+            </p>
+            <a href="btn btn-primary">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/volcano.png"
+            alt="weather-app-image"
+            class="img-fluid"
+          />
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/Maliau.png"
+            alt="weather-app-image"
+            class="img-fluid w-100"
+          />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Maliau Basin tours</h2>
+            <p class="mb-5 text-muted">
+              Maliau Basin Conservation Area, is a region in Tongod District of
+              Sabah, Malaysia, which represents a geological catchment
+              surrounding the Maliau River. Located around the centre of Sabah
+              in the Sandakan Division, it was designated as a conservation area
+              by the Sabah Foundation in 1981. Later in 1997 the Sabah State
+              Assembly gazetted the Basin as a Protection Forest Reserve.
+            </p>
+            <a href="btn btn-primary">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
