--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-      crossorigin="anonymous"
-    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Courgette&family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+
     <script
       src="https://kit.fontawesome.com/65548d3dfc.js"
       crossorigin="anonymous"
@@ -33,7 +34,7 @@
       <h1>Anzhelika Kovtun</h1>
       <h2 class="mb-5">Front-end developer based in Austria</h2>
       <div>
-        <a href="#" class="btn btn-primary">Contact me</a>
+        <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">Examples and description of my first progects</p>
@@ -55,7 +56,7 @@
               predictions, API integrations, displays the prevailing status of
               the weather on a daily and hourly basis. etc.
             </p>
-            <a href="btn btn-primary">Learn more</a>
+            <a href="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -75,7 +76,7 @@
               a pit crater in the volcano's summit caldera, and ended on March
               7, 2023.
             </p>
-            <a href="btn btn-primary">Learn more</a>
+            <a href="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -106,7 +107,7 @@
               by the Sabah Foundation in 1981. Later in 1997 the Sabah State
               Assembly gazetted the Basin as a Protection Forest Reserve.
             </p>
-            <a href="btn btn-primary">Learn more</a>
+            <a href="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
