--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               predictions, API integrations, displays the prevailing status of
               the weather on a daily and hourly basis. etc.
             </p>
-            <a href="btn btn-branding-outline">Learn more</a>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
               a pit crater in the volcano's summit caldera, and ended on March
               7, 2023.
             </p>
-            <a href="btn btn-branding-outline">Learn more</a>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -107,7 +107,7 @@
               by the Sabah Foundation in 1981. Later in 1997 the Sabah State
               Assembly gazetted the Basin as a Protection Forest Reserve.
             </p>
-            <a href="btn btn-branding-outline">Learn more</a>
+            <a href="#" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
