--- a/about.html
+++ b/about.html
@@ -31,18 +31,25 @@
   <body>
     <div class="about-section-container">
       <div class="row">
-        <div class="col-6">
-          <h1>Hi I am Azhelika Kovtun</h1>
-          <h2>Front-end developer based in Austria</h2>
-          <p>
-            For anyone who wants to start learning code, this workshop is very
-            interesting. You will be challenged with different exercises, and
-            everything is well explained, homework and deadlines are good for
-            keep focus
-          </p>
-          <div class="col-6">
-            <img src="/images/likapic.png" alt="picture of me" />
+        <div class="col-lg-6">
+          <div class="about-section-content">
+            <h1 class="mb-4">Hi I am Azhelika Kovtun</h1>
+            <h2 class="mb-4">Front-end developer based in Austria</h2>
+            <p class="mb-4">
+              For anyone who wants to start learning code, this workshop is very
+              interesting. You will be challenged with different exercises, and
+              everything is well explained, homework and deadlines are good for
+              keep focus
+            </p>
+            <a href="#" class="btn btn-branding">See my projects</a>
           </div>
+        </div>
+        <div class="col-lg-6">
+          <img
+            src="/images/lika2.png"
+            alt="picture of me"
+            class="img-fluid rounded"
+          />
         </div>
       </div>
     </div>
