added contact information to contact page

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,26 @@
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
+        <h3>Email</h3>
+        <p>
+          <a href="mailto:missanjellika77@gmail.com"
+            >missanjellika77@gmail.com</a
+          >
+        </p>
+        <h3>Instagram</h3>
+        <p>
+          <a
+            href="https://instagram.com/anjell_lika?igshid=OGQ5ZDc2ODk2ZA=="
+            target="_blank"
+            >@anjell_lika</a
+          >
+        </p>
+        <h3>Facebook</h3>
+        <p>
+          <a href="https://www.facebook.com/profile.php?id=100000891016807"
+            >Lika Lika</a
+          >
+        </p>
       </div>
     </div>
   </body>
