--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
       <nav class="d-flex justify-content-between">
         <img src="images/logolk.png" class="logo" alt="logo-image" />
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
+          <li><a href="/">Home</a></li>
+          <li class="active"><a href="/about.html">About</a></li>
           <li><a href="/work.html">Work</a></li>
           <li><a href="/contact.html">Contact</a></li>
         </ul>
