--- a/index.html
+++ b/index.html
@@ -122,6 +122,39 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:missanjellika77@gmail.com" class="email-link"
+            >missanjellika77@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://instagram.com/anjell_lika?igshid=OGQ5ZDc2ODk2ZA=="
+            target="_blank"
+            ><i class="fa-brands fa-instagram" style="color: #b9babc"></i
+          ></a>
+          <a href="https://github.com/Lika-77/week4project" target="_blank"
+            ><i class="fa-brands fa-github" style="color: #b9babc"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100000891016807"
+            target="_blank"
+            ><i class="fa-brands fa-facebook" style="color: #b9babc"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
