--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="About - Kovtun Anzhelika, Front-end developer. Responsible for developing new user-facing features, determining the structure and design of web pages, building reusable codes. Using HTML, CSS, and JavaScript to build the client side of a website"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -26,17 +30,19 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/file.css" />
-    <title>Lika</title>
+    <title>About page - Kovtun Anzhelika</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
         <img src="images/logolk.png" class="logo" alt="logo-image" />
         <ul>
-          <li><a href="/">Home</a></li>
-          <li class="active"><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li class="active">
+            <a href="/about.html" title="About page">About</a>
+          </li>
+          <li><a href="/work.html" title="Work page">Work</a></li>
+          <li><a href="/contact.html" title="Contact page">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -52,7 +58,7 @@
               everything is well explained, homework and deadlines are good for
               keep focus
             </p>
-            <a href="#" class="btn btn-branding">See my projects</a>
+            <a href="/work.html" class="btn btn-branding">See my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
@@ -63,6 +69,47 @@
           />
         </div>
       </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3">
+              Contact me
+            </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:missanjellika77@gmail.com"
+            class="email-link"
+            title="Email me"
+            >missanjellika77@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a
+            href="https://instagram.com/anjell_lika?igshid=OGQ5ZDc2ODk2ZA=="
+            target="_blank"
+            title="Instagram profile"
+            ><i class="fa-brands fa-instagram" style="color: #b9babc"></i
+          ></a>
+          <a
+            href="https://github.com/Lika-77/week4project"
+            target="_blank"
+            title="Github profile"
+            ><i class="fa-brands fa-github" style="color: #b9babc"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100000891016807"
+            target="_blank"
+            title="Facebook profile"
+            ><i class="fa-brands fa-facebook" style="color: #b9babc"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
