--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Contact - Kovtun Anzhelika. Responsible for developing new user-facing features, determining the structure and design of web pages, building reusable codes. Using HTML, CSS, and JavaScript to build the client side of a website"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -26,44 +30,67 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/file.css" />
-    <title>Lika</title>
+    <title>Contact page - Kovtun Anzhelika</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
         <img src="images/logolk.png" class="logo" alt="logo-image" />
         <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li class="active"><a href="/contact.html">Contact</a></li>
+          <li><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/about.html" title="About page">About</a></li>
+          <li><a href="/work.html" title="Work page">Work</a></li>
+          <li class="active">
+            <a href="/contact.html" title="Contact page">Contact</a>
+          </li>
         </ul>
       </nav>
     </div>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-5">Let's get in touch!</h1>
-        <h3>Email</h3>
-        <p>
-          <a href="mailto:missanjellika77@gmail.com"
+        <h1 class="mb-5 text-center">Let's get in touch!</h1>
+      </div>
+      <footer>
+        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="/contact.html" class="btn btn-branding mt-3">
+              Contact me
+            </a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a
+            href="mailto:missanjellika77@gmail.com"
+            class="email-link"
+            title="Email me"
             >missanjellika77@gmail.com</a
           >
-        </p>
-        <h3>Instagram</h3>
-        <p>
+        </div>
+        <div class="social-links d-flex justify-content-center">
           <a
             href="https://instagram.com/anjell_lika?igshid=OGQ5ZDc2ODk2ZA=="
             target="_blank"
-            >@anjell_lika</a
-          >
-        </p>
-        <h3>Facebook</h3>
-        <p>
-          <a href="https://www.facebook.com/profile.php?id=100000891016807"
-            >Lika Lika</a
-          >
-        </p>
-      </div>
+            title="Instagram profile"
+            ><i class="fa-brands fa-instagram" style="color: #b9babc"></i
+          ></a>
+          <a
+            href="https://github.com/Lika-77/week4project"
+            target="_blank"
+            title="Github profile"
+            ><i class="fa-brands fa-github" style="color: #b9babc"></i
+          ></a>
+          <a
+            href="https://www.facebook.com/profile.php?id=100000891016807"
+            target="_blank"
+            title="Facebook profile"
+            ><i class="fa-brands fa-facebook" style="color: #b9babc"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
