--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Front-end developer - Kovtun Anzhelika, based in Austria. Responsible for developing new user-facing features, determining the structure and design of web pages, building reusable codes. Using HTML, CSS, and JavaScript to build the client side of a website"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -26,17 +30,17 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/file.css" />
-    <title>Lika</title>
+    <title>Front-end developer - Kovtun Anzhelika</title>
   </head>
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
         <img src="images/logolk.png" class="logo" alt="logo-image" />
         <ul>
-          <li class="active"><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li class="active"><a href="/" title="Homepage">Home</a></li>
+          <li><a href="/about.html" title="About page">About</a></li>
+          <li><a href="/work.html" title="Work page">Work</a></li>
+          <li><a href="/contact.html" title="Contact page">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +49,7 @@
       <h1>Anzhelika Kovtun</h1>
       <h2 class="mb-5">Front-end developer based in Austria</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn btn-branding">Contact me</a>
       </div>
     </div>
     <p class="text-center m-5">Examples and description of my first progects</p>
@@ -67,7 +71,7 @@
               predictions, API integrations, displays the prevailing status of
               the weather on a daily and hourly basis. etc.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
@@ -87,7 +91,7 @@
               a pit crater in the volcano's summit caldera, and ended on March
               7, 2023.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -118,22 +122,27 @@
               by the Sabah Foundation in 1981. Later in 1997 the Sabah State
               Assembly gazetted the Basin as a Protection Forest Reserve.
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn more</a>
           </div>
         </div>
       </div>
       <footer>
         <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3"> Contact me </a>
+            <a href="/contact.html" class="btn btn-branding mt-3">
+              Contact me
+            </a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:missanjellika77@gmail.com" class="email-link"
+          <a
+            href="mailto:missanjellika77@gmail.com"
+            class="email-link"
+            title="Email me"
             >missanjellika77@gmail.com</a
           >
         </div>
@@ -141,14 +150,19 @@
           <a
             href="https://instagram.com/anjell_lika?igshid=OGQ5ZDc2ODk2ZA=="
             target="_blank"
+            title="Instagram profile"
             ><i class="fa-brands fa-instagram" style="color: #b9babc"></i
           ></a>
-          <a href="https://github.com/Lika-77/week4project" target="_blank"
+          <a
+            href="https://github.com/Lika-77/week4project"
+            target="_blank"
+            title="Github profile"
             ><i class="fa-brands fa-github" style="color: #b9babc"></i
           ></a>
           <a
             href="https://www.facebook.com/profile.php?id=100000891016807"
             target="_blank"
+            title="Facebook profile"
             ><i class="fa-brands fa-facebook" style="color: #b9babc"></i
           ></a>
         </div>
